优化代码及注释

--- a/main.ipynb
+++ b/main.ipynb
@@ -17,7 +17,7 @@
     }
    ],
    "source": [
-    "# 本次模型训练任务为根据多个特征属性预测房价\n",
+    "# 本代码模型训练任务为根据多个特征属性预测房价\n",
     "from keras.datasets import boston_housing\n",
     "# 导入训练数据和测试数据\n",
     "(train_data, train_targets), (test_data, test_targets) = boston_housing.load_data()\n",
@@ -303,7 +303,8 @@
    ],
    "source": [
     "\"\"\"\n",
-    "以上输出结果表明训练数据集有404条，测试数据集有102条。而每条数据集都包含13个方面的特征，它包括以下几种数据信息： \n",
+    "以上输出结果表明训练数据集有404条，测试数据集有102条\n",
+    "而每条数据集都包含13个方面的特征，它包括以下几种数据信息： \n",
     "1，城镇中非商业用地的比率 \n",
     "2，每块面积25000英尺的地皮上，住宅用地的比率。 \n",
     "3，城镇中非零售商业用地面积 \n",
@@ -319,7 +320,11 @@
     "13，底层人口的百分比\n",
     "我们要预测的是自有产权房的中位价格，单位是千美元\n",
     "\"\"\"\n",
-    "# 数据规范化\n",
+    "\"\"\"\n",
+    "数据规范化:\n",
+    "我们需要把数据的格式统一起来，如果把不同格式，不同单位的数据杂糅一起输入网络会影响结果的准确度。\n",
+    "数据规格化的做法是，计算每一个种类数据的均值，然后每个数据实例减去该均值，然后在除以数据的标准差\n",
+    "\"\"\"\n",
     "mean = train_data.mean(axis=0)\n",
     "train_data -= mean\n",
     "std = train_data.std(axis = 0)\n",
@@ -329,7 +334,6 @@
     "\"\"\"\n",
     "Keras 是为人类而非机器设计的 API。Keras 遵循减少认知困难的最佳实践: \n",
     "它提供一致且简单的 API，它将常见用例所需的用户操作数量降至最低，并且在用户错误时提供清晰和可操作的反馈。\n",
-    "这使 Keras 易于学习和使用。作为 Keras 用户，你的工作效率更高，能够比竞争对手更快地尝试更多创意，从而帮助你赢得机器学习竞赛。\n",
     "这种易用性并不以降低灵活性为代价：因为 Keras 与底层深度学习语言（特别是 TensorFlow）集成在一起，\n",
     "所以它可以让你实现任何你可以用基础语言编写的东西。特别是，tf.keras 作为 Keras API 可以与 TensorFlow 工作流无缝集成。\n",
     "\"\"\"\n",
@@ -338,10 +342,7 @@
     "import numpy as np\n",
     "import time\n",
     "\n",
-    "\"\"\"\n",
-    "后面会反复构造同一种结构的网络，所以我们把网络的构造代码放在一个函数中，\n",
-    "后面只要直接调用该函数就可以将网络迅速初始化\n",
-    "\"\"\"\n",
+    "# 构建深度神经网络模型(包括输入端个数、节点数、激活函数、优化器、模型评估标准)\n",
     "def build_model(d):\n",
     "    model = models.Sequential()\n",
     "    model.add(layers.Dense(d, activation='relu', input_shape=(train_data.shape[1],)))\n",
@@ -351,15 +352,15 @@
     "    return model\n",
     "# 为了方便后续的参数调优，我们需要在训练过程中对多个参数的训练效果进行尝试\n",
     "def test_build_model():\n",
-    "    # 以遍历训练输出的方式进行（对神经网络节点数以16为起点，16为步长，128为终点进行便利训练）\n",
+    "    # 以遍历训练输出的方式进行（对神经网络节点数以16为起点，16为步长，128为终点进行遍历训练）\n",
     "    for d in range(16, 129, 16):\n",
     "        print ('d = ',d) \n",
-    "        # 以遍历训练输出的方式进行（对神经网络梯度更新样本数以16为起点，16为步长，128为终点进行便利训练）\n",
+    "        # 以遍历训练输出的方式进行（对神经网络梯度更新样本数以16为起点，16为步长，128为终点进行遍历训练）\n",
     "        for b in range(16, 129, 16):\n",
     "            print ('b = ',b)\n",
     "            time1 = time.time() # 对每次训练进行计时\n",
     "            k = 4 # 设置训练集分割数\n",
-    "            num_val_samples = len(train_data) // k \n",
+    "            num_val_samples = len(train_data) // k # 设置验证数据集的个数\n",
     "            num_epochs = 200 # 设置训练轮数\n",
     "            all_mae_histories = [] # 记录每次训练的误差信息，便于把握模型准确率\n",
     "            # 分割训练集（训练集+验证集）\n",
@@ -391,9 +392,8 @@
     "                    print ('min_numst = ', i)\n",
     "            time2 = time.time()\n",
     "            print (u'总共耗时：' + str(time2 - time1) + 's')\n",
-    "time1 = time.time()\n",
-    "time2 = time.time()\n",
-    "test_build_model()"
+    "\n",
+    "test_build_model() # 遍历训练不同参数下的模型"
    ]
   },
   {
